--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "json-server --watch data/cities.json --port 9000 delay 500"
   },
   "dependencies": {
+    "firebase": "^10.11.1",
     "json-server": "^1.0.0-alpha.23",
     "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
@@ -18,7 +19,8 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
